--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!-- REFERENCIAS: https://www.w3schools.com/tags/default.asp -->
     </head>
     <body>
-        <!-- HEADING = Cabeçalho -->
+        <!-- HEADING/H = Cabeçalho -->
         <h1>This is a heading 1</h1>
         <h2>Cabeçalho 2</h2>
         <h3>Cabeçalho 3</h3>
@@ -13,7 +13,7 @@
         <h5>Cabeçalho 5</h5>
         <h6>Cabeçalho 6</h6>
 
-        <!-- PARAGRAPH = Paragrafo -->
+        <!-- PARAGRAPH/P = Paragrafo -->
         <!-- STRONG = Negrito -->
         <!-- EM = Enfase/Itálico-->
         <h1><p>This is a paragraph</p></h1>
